# android-resources

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
android_resources/: __init__.py  arsc.py  cli.py
android_resources.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: android_string_resources.md
tests/: conftest.py  test_arsc.py
