[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-resources"
version = "0.1.0"
description = "Reverse-engineer Android string tables from resources.arsc files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Disassemblers",
]

[project.scripts]
arsc-strings = "android_resources.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
